# mri_autoqa

./: README.md  algorithm_router.py  autoqa_launcher.py  batch_processor.py  batch_visualization.py  config.py  dicom_converter_enhanced.py  parallel_corrector.py  pyproject.toml  quality_metrics.py  run_analysis.py  single_image_v3_engine.py  single_imagine.py  visualization.py  visualization_config.py
docs/: Changelog.md  Getting Started.md  LICENSE.md  README.md  References.md  installation.md  requirements.txt
docs/api_documentation/: config_api.md  core_modules.md  visualization_api.md
docs/developer_guide/: contributing.md
docs/examples/: sample_data.md
docs/examples/autoqa_results/sample_patient_001/T1_scan_001/: qa_report.json  quality_summary.txt
docs/examples/autoqa_results/sample_patient_001/T2_scan_002/: qa_report.json  quality_summary.txt
docs/examples/autoqa_results/sample_patient_002/PD_scan_001/: qa_report.json  quality_summary.txt
docs/examples/batch_report_imaging center/: REPORT_INDEX_20260111_111858.md
docs/examples/batch_report_imaging center/00_executive_summary/: analysis_statistics.json  executive_summary_20260111_111858.md  quick_summary_20260111_111858.txt
docs/examples/batch_report_imaging center/01_detailed_data/: data_fields_20260111_111858.md  detailed_results_20260111_111858.csv
docs/examples/batch_report_imaging center/03_quality_analysis/: anatomy_statistics_20260111_111858.csv  low_confidence_scans_20260111_111858.csv  problem_analysis_20260111_111858.md  problem_scans_20260111_111858.csv  sequence_statistics_20260111_111858.csv  statistical_report_20260111_111858.md
docs/examples/batch_report_imaging center/04_technical_appendix/: field_mapping_20260111_111858.md  processing_stats_20260111_111858.json
docs/examples/sample_patient_001/T1_scan_001/: metadata.json
docs/examples/sample_patient_001/T2_scan_002/: metadata.json
docs/examples/sample_patient_002/PD_scan_001/: metadata.json
docs/tutorials/: advanced_features.md  basic_usage.md  batch_processing.md  faq.md  troubleshooting.md
docs/user_guide/: algorithms.md  architecture.md  outputs.md  overview.md  workflow.md
